mise a jour de certain fonction au niveau de la documentation
